# cmake-compile-on-windows-test

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
